# opengl-car-game

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  GameTime.cpp  GameTime.h  InputState.h  Loader.cpp  Loader.h  Makefile  Model.cpp  Model.h  README.md  ShadowMap.cpp  ShadowMap.h  Window.cpp  Window.h  constants.h  glm_ext.h  main.cpp
cmake/Modules/: FindGLM.cmake
entities/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Light.h  Player.cpp  Player.h  Terrain.cpp  Terrain.h
libs/: stb_image.h
particles/: Particle.cpp  Particle.h  ParticleManager.cpp  ParticleManager.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleShader.cpp  ParticleShader.h  ParticleSystem.cpp  ParticleSystem.h  particle.frag  particle.vert
renderers/: EntityRenderer.cpp  EntityRenderer.h  RenderManager.cpp  RenderManager.h  SkyboxRenderer.cpp  SkyboxRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h
res/: readme.txt
res/Barrel/: Barrel02.mtl
res/car/: car-n.mtl
res/cone/: cone2_obj.mtl
res/fence/: fence.mtl
res/pine/: PineTransp.mtl
res/sky/: sky_back.tga  sky_bottom.tga  sky_front.tga  sky_left.tga  sky_right.tga  sky_top.tga
res/stump/: TreeStump03.mtl
res/tree/: PineTree03.mtl
shaders/: EntityShader.cpp  EntityShader.h  ShaderProgram.cpp  ShaderProgram.h  SkyboxShader.cpp  SkyboxShader.h  TerrainShader.cpp  TerrainShader.h  entity.frag  entity.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert
water/: WaterRenderer.cpp  WaterRenderer.h  WaterShader.cpp  WaterShader.h  water.frag  water.vert
